--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/cucumber-js"
+    "test": "./node_modules/.bin/cucumber-js",
+    "temp": "protractor protractor.conf.js"
   },
   "repository": {
     "type": "git",
@@ -17,15 +18,19 @@
   },
   "homepage": "https://github.com/dangtiendung1998/e2e-automation-test#readme",
   "dependencies": {
-    "@cucumber/cucumber": "^8.2.2",
+    "@cucumber/cucumber": "^7.3.2",
     "assert": "^2.0.0",
     "axios": "^0.27.2",
     "chromedriver": "^102.0.0",
+    "cucumber": "^6.0.7",
     "geckodriver": "^3.0.1",
+    "protractor": "^7.0.0",
+    "protractor-cucumber-framework": "^8.4.3",
     "selenium-webdriver": "^4.2.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
     "cucumber-html-reporter": "^5.5.0"
   }
 }
