--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/cucumber-js",
-    "temp": "protractor protractor.conf.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -18,19 +17,15 @@
   },
   "homepage": "https://github.com/dangtiendung1998/e2e-automation-test#readme",
   "dependencies": {
-    "@cucumber/cucumber": "^7.3.2",
-    "assert": "^2.0.0",
-    "axios": "^0.27.2",
-    "chromedriver": "^102.0.0",
-    "cucumber": "^6.0.7",
-    "geckodriver": "^3.0.1",
-    "protractor": "^7.0.0",
-    "protractor-cucumber-framework": "^8.4.3",
-    "selenium-webdriver": "^4.2.0"
+    "cypress-cucumber-preprocessor": "^4.3.1"
+  },
+  "cypress-cucumber-preprocessor": {
+    "json": {
+      "enabled": true
+    },
+    "step_definitions": "cypress/integration/step_definitions/**/"
   },
   "devDependencies": {
-    "chai": "^4.3.6",
-    "chai-as-promised": "^7.1.1",
-    "cucumber-html-reporter": "^5.5.0"
+    "cypress": "^10.1.0"
   }
 }
